--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 		}
 	],
 	"require": {
-		"php": ">=5.3.2"
+		"php": ">=5.3.2",
+		"webit/fixed-width-file": "dev-master"
 	},
 	"autoload": {
 		"psr-0": {
