--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"description": "Web-IT SPS Parser",
 	"keywords": ["web-it","sps"],
 	"homepage": "http://www.web-it.eu",
-	"license": "Web-IT",
+	"license": "MIT",
 	"authors": [
 		{
 			"name": "Web-IT",
